force-app/main/default/objects/Product2/fields/Depth__c.field-meta.xml
<CustomField>
    <fullName>Depth__c</fullName>
    <label>Depth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>