force-app/main/default/objects/Product2/fields/External_Material_Group__c.field-meta.xml
<CustomField>
    <fullName>External_Material_Group__c</fullName>
    <label>External Material Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DYED FIBRE</fullName>
            </value>
            <value>
                <fullName>DYED STAPLE FIBER</fullName>
            </value>
            <value>
                <fullName>DYED TOW</fullName>
            </value>
            <value>
                <fullName>DYED TOPS</fullName>
            </value>
            <value>
                <fullName>WASTE DYEING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>