force-app/main/default/objects/Product2/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <formula>IF( Distribution_Channel__c  =&apos;10&apos;&amp;&amp;  Division__c  = &apos;10&apos;, &apos;Fibre/tops/tows&apos;,
IF(Distribution_Channel__c =&apos;10&apos; &amp;&amp; Division__c = &apos;20&apos;, &apos;Yarn&apos;,
&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula</label>
    <type>Text</type>
</CustomField>